Sat Oct 11 11:28:04 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* examples/RTScheduling/Starter.dsp: Added include/library paths
	  and libraries to release configuration.

Sat Oct 11 11:17:52 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* examples/RTScheduling/Fixed_Priority_Scheduler/Fixed_Priority_Scheduler.dsp: 
	* examples/RTScheduling/MIF_Scheduler/MIF_Scheduler.dsp: 
	* orbsvcs/orbsvcs/Metrics.dsp: 

	  Added xxxx_BUILD_DLL macro definition to the release
	  configurations to fix Win32 MSVC release builds.

Sat Oct 11 05:57:20 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* orbsvcs/tests/LoadBalancing/GenericFactory/Infrastructure_Controlled/server.dsp:
	  Added library paths to fix build errors in MSVC6 debug builds.
	
	* orbsvcs/examples/Notify/ThreadPool/ThreadPool.dsp:
	  Removed this file since it was not getting used anywhere and
	  incorrect also causing build errors. There were two other .dsp
	  files (Consumer.dsp and Supplier.dsp) in the same directory
	  which were getting built properly and these .dsp files include
	  all the files in that directory between them.
	
Fri Oct 10 23:04:17 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* orbsvcs/orbsvcs/Sched/Reconfig_Sched_Utils_T.cpp: 
	* orbsvcs/orbsvcs/Sched/Reconfig_Sched_Utils.h: 
	* orbsvcs/orbsvcs/Sched/Reconfig_Sched_Utils.cpp: 
	* orbsvcs/orbsvcs/Event/EC_Kokyu_Dispatching.cpp: 

	  Guarded debugging statements with logging macros.
	
Fri Oct 10 11:58:25 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* examples/RTScheduling/Common_IDL_Gen.dsp: 

	  Added custom build command for idl compilation in release
	  configuration to clear build MSVC release build errors.

Fri Oct 10 11:51:42 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* examples/RTScheduling/Fixed_Priority_Scheduler/Fixed_Priority_Scheduler.dsp: 
	* examples/RTScheduling/MIF_Scheduler/MIF_Scheduler.dsp: 
	* tests/RTScheduling/Scheduling_Interceptor/Scheduler_Interceptor_Client.dsp:
	  