@@ -1,3 +1,14 @@
+Sat Oct 11 21:42:36 2003  Venkita Subramonian  <venkita@cs.wustl.edu>
+
+	* orbsvcs/orbsvcs/Event/EC_Kokyu_Dispatching.{h,cpp}: 
+	* orbsvcs/orbsvcs/Event/EC_Kokyu_Factory.{h,i,cpp}: 
+	  Added scheduling policy and scope to configure the Kokyu
+	  dispatcher with.
+
+	* orbsvcs/examples/RtEC/Kokyu/svc.conf.xml: 
+	* orbsvcs/examples/RtEC/Kokyu/svc.conf: Added scheduling policy
+	  for the example to configure the Kokyu dispatcher. 
+	
 Sat Oct 11 11:28:04 2003  Venkita Subramonian  <venkita@cs.wustl.edu>
 
 	* examples/RTScheduling/Starter.dsp: Added include/library paths
